# conch

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  RELEASE.md  REUSE.toml
.github/: dependabot.yml
.github/workflows/: actions.yml  build.yml  check.yml  release.yml  rtd.yml
docs/: Makefile  api.rst  conf.py  config.rst  index.rst  install.rst  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
helm/conch/: Chart.yaml  values.yaml
helm/conch/templates/: _helpers.yaml  configmap.yaml  deployment.yaml  service.yaml
oci/: Containerfile  build.sh
src/: main.rs
tests/integration/: Containerfile  basic.hurl  build.sh  integration.sh  k8s.yml  run.sh  values.yaml
