# SPDX-FileCopyrightText: © 2024 Matt Williams <matt.williams@bristol.ac.uk>
# SPDX-License-Identifier: MIT

[package]
name = "conch"
version = "0.0.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["tracing", "query"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.5.13", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
http-serde = "2.1.1"
jsonwebtoken = "9.3.0"
openidconnect = "3.5.0"
rand_core = "0.6.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
ssh-key = { version = "0.6.6", features = ["dsa", "ecdsa", "ed25519", "rsa", "serde"] }
tokio = { version = "1.39", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.2"

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
