# SPDX-FileCopyrightText: © 2024 Matt Williams <matt.williams@bristol.ac.uk>
# SPDX-License-Identifier: MIT

[package]
name = "conch"
version = "0.3.1"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["tracing", "query"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
http-serde = "2.1"
jsonwebtoken = "9.3"
openidconnect = "4.0"
rand_core = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh-key = { version = "0.6", features = ["dsa", "ecdsa", "ed25519", "rsa", "serde"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
